samples/_failures_safe/1761157153_d767e6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ac16512c.c: In function ‘state_to_string’:
./samples/SAFE/__tmp_ac16512c.c:152:52: error: missing terminating " character
  152 |         "IDLE", "READY", "PROCESSING", "COMPLETE", "ERROR
      |                                                    ^~~~~~
./samples/SAFE/__tmp_ac16512c.c:152:9: error: expected expression at end of input
  152 |         "IDLE", "READY", "PROCESSING", "COMPLETE", "ERROR
      |         ^~~~~~
./samples/SAFE/__tmp_ac16512c.c:152:9: error: expected declaration or statement at end of input
